30/01/2005 0.0.24
- yahoo.lua: traduzione descrizione in italiano (ncocchiaro)
- tre.lua: another purge fix... (dpeddi)
- yahoo.lua: Fixed a variety of bugs including missing ending crlf and dealing with changing msgids (russell822)
- es, fr: changed slackware link (alessiofender)
- freepopsd.vbs: added rojous patch to delete log files from freepopsd.vbs (gareuselesinge)
- tre.lua: fixed problem with purge (dpeddi)
- fr: added fr website (gareuselesinge)
- fr: *** empty log message *** (fvancaen)
- es, fr: fixed rss (gareuselesinge)
- es: *** empty log message *** (lisar314)
- yahoo.lua: Some minor tweaks to yahoo. (russell822)
- fixed Location handling in case a non rfc conformin web server (IIS)
sends a relativeURI instead an absoluteURI
- added @unforgettable.com to mailcom (thanks tranx)
- fixed bad &nbsp; in httpmail.lua (thanks Charlie)
- double - in the manual are now separated by a \hspace{1mm}
- removed rfcs and contracts from the default tarball since they are not
conforming to DFSG.
- added command 'status' to RPM init script
- added Rojous patch to freepopsd.vbs to clean log files
- fixed "no more log file names available" bug
- added concento.it and clarence.com (thanks m_root and Olizad)
- fixed bad &iexcl; in httpmail.lua (thanks Javier)
- patch for FreeBSD compilation problems (thanks Filippo Natali)
- fixed debian builds and debs, now hopefully conforming to debian policy
25/12/2004 0.0.23
- updated kernel.lua plugin
- es: *** empty log message *** (lisar314)
- tre.lua: Added folder parameter, now use curl for basic auth, added support for three.com.au and others (To be tested) (dpeddi)
- hotmail.lua: added mailcom and fixed hotmail.it (gareuselesinge)
- tre.lua: Bugfix, From/To/Cc should be parsed correctly, initial support for e-mail from vocal mailbox (dpeddi)
- tre.lua: Date should be now in an RFC format (dpeddi)
- tre.lua: Cleaned email body from three html tags (dpeddi)