@@ -1,4 +1,5 @@
 30/01/2005 0.0.24
+- libero.lua: Fixed to reflect webmail changes
 - yahoo.lua: traduzione descrizione in italiano (ncocchiaro)
 - tre.lua: another purge fix... (dpeddi)
 - yahoo.lua: Fixed a variety of bugs including missing ending crlf and dealing with changing msgids (russell822)
